--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -5,7 +5,8 @@ if(_color-theme is a 'rgba')
 else
   color-theme = #171f26
   
-color-background = #F1F1F1
+color-background = #f2f2f2
+color-backcolor = #f1f1f1
 color-black = #444
 color-font = #666
 color-content = #413F3F
