--- a/source/css/_partial/aside.styl
+++ b/source/css/_partial/aside.styl
@@ -67,7 +67,7 @@
     margin 0 5% 0 0
   @media tablet 
     width 100%
-    float none
+    float left
     margin 1em 0 0
   li 
     border-bottom 1px solid color-gray
@@ -86,7 +86,7 @@
     margin 0 5% 0 0
   @media tablet 
     width 100%
-    float none
+    float left
     margin 1em 0 0
   ul
     padding 0.5em 0
