--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -109,19 +109,19 @@
     border-left 0em solid color-blue
 
 #page-nav
-  font-size 1.1em
+  font-size 1em
   background color-white
   margin-top 0.4em
   text-align center
   overflow hidden
   a
     display inline-block
-    padding 0.5em 1em
+    padding 0.68em 1em
   a
     color color-blue
     &:hover
       background lighten(color-gray, 65%)
-      color color-theme
+      color color-blue
   .prev
     transition border-left .5s
     float left
@@ -139,11 +139,11 @@
       padding-left 0.5em
   .page-number
     display none
-    padding 0.5em 1em
+    padding 0.7em 1em
     @media mini
       display inline-block
   .current
-    color color-black
+    color color-theme
     font-weight bold
   .space
     color color-blue
