--- a/source/css/_partial/totop.styl
+++ b/source/css/_partial/totop.styl
@@ -6,22 +6,43 @@
   @media tabletmax
     display none !important
 
-#img_over
-	margin-top 6px
-	width 200px
+#img_over {
 	border-radius 11px
 	transition all 0.25s
 	transform scale(1.05)
 	-webkit-box-shadow 0 0 9px rgb(200, 200, 200)
 	-moz-box-shadow 0 0 9px rgb(200, 200, 200)
 	box-shadow 0 0 9px rgb(200, 200, 200)
-  			
-#img{
-	margin-top 6px
-	width 200px
+}
+
+#img {
 	border-radius 11px
 	transition all 0.35s
 	transform scale(1)
+	-webkit-box-shadow 0 0 8px rgb(200, 200, 200)
+	-moz-box-shadow 0 0 8px rgb(200, 200, 200)
+	box-shadow 0 0 8px rgb(200, 200, 200)
+}
+
+#img_small {
+	margin-left 0.3em
+	margin-right 0.3em
+	margin-top 0.2em
+	border-radius 6px
+	transition all 0.3s
+	transform scale(1)
+	-webkit-box-shadow 0 0 8px rgb(200, 200, 200)
+	-moz-box-shadow 0 0 8px rgb(200, 200, 200)
+	box-shadow 0 0 8px rgb(200, 200, 200)
+}
+
+#img_small_over {
+	margin-left 0.3em
+	margin-right 0.3em
+	margin-top 0.2em
+	border-radius 6px
+	transition all 0.3s
+	transform scale(1.08)
 	-webkit-box-shadow 0 0 8px rgb(200, 200, 200)
 	-moz-box-shadow 0 0 8px rgb(200, 200, 200)
 	box-shadow 0 0 8px rgb(200, 200, 200)
