--- a/source/css/_base/highlight/highlight.styl
+++ b/source/css/_base/highlight/highlight.styl
@@ -7,7 +7,7 @@
 highlight-font-size = 1em
 
 $code-block
-  background rgba(254, 227, 51, 0.41)
+  background color-backcolor
   margin 0.5em 0
   padding 0.5em 2%
   color rgba(76, 76, 75, 1)
