--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -95,6 +95,7 @@ header nav
     float right
     width auto
     margin-top 1em
+    margin-bottom 0.1em
     max-height none
   font-size font-size+12.5
   padding-top 0.5em
