--- a/source/css/_partial/totop.styl
+++ b/source/css/_partial/totop.styl
@@ -7,6 +7,9 @@
     display none !important
 
 #img_over {
+	margin-left 0.3em
+	margin-right 0.3em
+	margin-top 18px
 	border-radius 11px
 	transition all 0.25s
 	transform scale(1.05)
@@ -16,6 +19,9 @@
 }
 
 #img {
+	margin-left 0.3em
+	margin-right 0.3em
+	margin-top 18px
 	border-radius 11px
 	transition all 0.35s
 	transform scale(1)
