--- a/layout/_partial/totop.ejs
+++ b/layout/_partial/totop.ejs
@@ -3,4 +3,12 @@
 	<a title="<%= __('totop')%>"><img width="64px" height="64px" src="<%- config.root %>img/scrollup.png"/></a>
 	</div>
 	<script src="<%- config.root %>js/totop.js"></script>
+	
+	 <script type="text/javascript">
+      
+      function closeButton() {
+        document.getElementById("iCloseButton").click();
+      }
+
+    </script>
 <% } %>
