--- a/layout/_widget/links.ejs
+++ b/layout/_widget/links.ejs
@@ -1,10 +1,42 @@
 <div class="linkslist">
     <p class="asidetitle"><%= __('links') %></p>
-    <ul>
-        <% for (var i in theme.links){ %>
-          <li>
-            	<a href="<%- theme.links[i] %>" target="_blank"><%- i %></a>
-          </li>
-        <% } %>
-    </ul>
+
+	<div style="width:100%; text-align:left; margin-top:15px;">Read</div>
+
+		<div style="width:100%; text-align:center;">
+
+			<a href="https://the-offline.com/">
+		  	<img id="img" width="200px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/offline.png" /></a>
+
+		  	<a href="http://www.smartisan.com/apps/reader">
+		  	<img id="img" width="200px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/reader.png" /></a>
+
+	 	</div>
+
+	  	<div style="width:100%; text-align:left; margin-top:26px;">Podcast</div>
+
+		  	<div style="width:100%; text-align:center;">
+
+			<a href="https://banlan.show/bitvoice">
+			<img id="img" width="200px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/banlanshow.png" /></a>
+
+			<a href="http://ydlbk.com">
+			<img id="img" width="200px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/youdeliao.png" /></a>
+
+		</div>
+
+
+  	<div style="width:100%; text-align:left; margin-top:26px; margin-bottom:16px;">VPN</div>
+
+  	<div style="width:100%; text-align:center; margin-bottom:6px;">
+	  	<a href="https://duotai.org">
+	  	<img id="img_small" width="68px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/duotai.png" /></a>
+
+	  	<a href="https://www.vpnso.com/main.php">
+	  	<img id="img_small" width="68px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/vpnso.png" /></a>
+
+	  	<a href="https://eurekavpt.com">
+	  	<img id="img_small" width="68px" onmouseover="change(this);" onmouseleave="leave(this);" src="http://idevnotes.com/img_blog/eurekavpt.png" /></a>
+	</div>
 </div>
+
